--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tool to mock up Chaordic widgets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js start"
   },
   "devDependencies": {
   	"express": "4.15.3"
